Fixed baseline alignment error on list titles.

--- a/app/assets/stylesheets/fresh_writing.css.scss
+++ b/app/assets/stylesheets/fresh_writing.css.scss
@@ -516,7 +516,7 @@ div.volume {
     position:relative;
     display: flex;
     flex-wrap:wrap;
-    align-items: baseline;
+    
     * {
       flex-grow: 1;
     }
